<resources>
    <string name="app_name">StudyTracker</string>
    <string name="Slogan">Track, Focus, Succeed</string>
    <string name="screen1">Plan Smarter</string>
    <string name="screen1_text">Easily schedule study sessions and keep track of tasks</string>
    <string name="screen2">Stay Motivated</string>
    <string name="screen2_text">Monitor your study hours and visualize your progress</string>
    <string name="screen3">Reach Your Goals</string>
    <string name="screen3_text">Stay consistent, Build habits, and Achieve success</string>
    <string name="home_welcome">\"Good Morning,
        Have a great day ahead!\"</string>
    <string name="date">Thursday, August 24, 2025</string>
    <string name="card1_value">1/3</string>
    <string name="card1_text">Tasks Completed</string>
    <string name="card2_value">4.5hr</string>
    <string name="card2_text">Study Hours\n</string>
    <string name="card3_value">75%</string>
    <string name="card3_text">Weekly Goals</string>
    <string name="home_heading1">Today\'s Tasks</string>
    <string name="task1">Complete Unit 8 in Science</string>
    <string name="task1_due">Due:8pm</string>
    <string name="task2">Study for upcoming Geography test</string>
    <string name="task2_due">Due:2nd Sep 2025</string>
    <string name="home_heading2">Quick Actions</string>
    <string name="quick_action1">Pomodoro</string>
    <string name="quick_action2">Notes</string>
    <string name="quick_action3">Flash Cards</string>
    <string name="home_heading3">Study Music</string>
    <string name="home_music_name">Study Music Mix</string>
    <string name="home_music_description">Calm Study Music</string>
    <string name="calendar_pg">Calendar</string>
    <string name="Day1">Monday</string>
    <string name="Day2">Tuesday</string>
    <string name="Day3">Wednesday</string>
    <string name="Day4">Thursday</string>
    <string name="Day5">Friday</string>
    <string name="Day6">Saturday</string>
    <string name="Day7">Sunday</string>
    <string name="date1">19th</string>
    <string name="date2">20th</string>
    <string name="date3">21st</string>
    <string name="date4">22nd</string>
    <string name="date5">23rd</string>
    <string name="date6">24th</string>
    <string name="date7">25th</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="upcoming_event1">Science Unit 8 test:- 2nd Sep</string>
    <string name="upcoming_event2">Geography test:-4th Sep</string>
    <string name="btn_1">Add Task</string>
    <string name="btn_2">Add Reminder</string>
    <string name="progress_pg">Progress and Reports</string>
    <string name="progress_switch">Overall Progress</string>
    <string name="profile_name">Katy John</string>
    <string name="bio">\"Passionate about learning and staying organized."</string>
    <string name="task_done_value">128</string>
    <string name="study_time_value">40.6hr</string>
    <string name="daily_streak_value">19</string>
    <string name="task_done">Tasks Done</string>
    <string name="study_time">Study Hours</string>
    <string name="daily_streak">Daily Streak</string>
    <string name="preferences">Preferences</string>
    <string name="login">Login to Focusly</string>
    <string name="forget_pw">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="signup_promt">Don’t have an account? Sign Up</string>
    <string name="email_hint">john24@gmail.com</string>
    <string name="password_hint">............</string>
    <string name="or">OR</string>
    <string name="theme_text">Theme</string>
    <string name="notify_text">Notifications</string>
    <string name="default_session">Default Session Duration</string>
    <string name="study_reminders">Study Reminders</string>
    <string name="study_goals">Study Goals</string>
    <string name="pomodoro_settings">Pomodoro Settings</string>
    <string name="study_settings">Study Settings</string>
    <string name="app_info">App Info</string>
    <string name="contact_suppot">Contact Support</string>
    <string name="signout_btn">Signout</string>
    <string name="progress_descrip">Track your study achievements</string>
    <string name="overall_progress">Overall Progress</string>
    <string name="task_completed">Task Completed</string>
    <string name="task_completed_value">57</string>
    <string name="tot_hrs">Total Time</string>
    <string name="tot_hrs_value">45hrs</string>
    <string name="export_btn">Export Report</string>
    <string name="subject_progress">Subject Progress</string>
    <string name="weekly_study">Weekly Study Hours</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="remember_me_checkbox">Remember Me</string>
    <string name="btn_next">Next</string>
    <string name="lets_start">Let\'s Begin</string>
    <string name="start_screen_text">“Your journey to smarter studying starts here. Stay focused, track progress, and achieve your goals — let’s begin!”</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">SignUp</string>
    <string name="signup">Sign Up</string>
    <string name="signup_description">Sign up with Focusly</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="login_">Login</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="progress">Progress</string>
    <string name="profile">Profile</string>
    <string name="export_report">Export Overall Report</string>
    <string name="app_setting">App Settings</string>
</resources>