<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient"
    android:padding="24dp">

    <!-- White rounded rectangle container -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="520dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/lets_start"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/onboard_screen3"
            tools:srcCompat="@drawable/lets_begin" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_screen_text"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login_btn"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/signup_btn"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>