<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboard2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient"
    android:padding="24dp">

    <!-- White rounded rectangle container -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="Illustration"
            android:src="@drawable/onboard_screen2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/screen2"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/screen2_text"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_next2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/btn_next"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
