<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="414dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/textbox_bg" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/progress_pg"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/imageView16"
                app:layout_constraintTop_toTopOf="@+id/imageView16" />

            <ImageView
                android:id="@+id/imageView50"
                android:layout_width="113dp"
                android:layout_height="88dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView16"
                app:srcCompat="@drawable/progress" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/progress_descrip"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/imageView16"
                app:layout_constraintTop_toBottomOf="@+id/textView48" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/overall_progress"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView16" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/subject_progress"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView63" />

            <ImageView
                android:id="@+id/imageView63"
                android:layout_width="350dp"
                android:layout_height="140dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView58"
                app:srcCompat="@drawable/task_list_bg" />

            <ImageView
                android:id="@+id/imageView68"
                android:layout_width="167dp"
                android:layout_height="135dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView63"
                app:srcCompat="@drawable/circular_progress_bar" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/task_completed"
                app:layout_constraintStart_toStartOf="@+id/imageView63"
                app:layout_constraintTop_toTopOf="@+id/imageView63" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="260dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/tot_hrs"
                app:layout_constraintStart_toStartOf="@+id/imageView63"
                app:layout_constraintTop_toTopOf="@+id/imageView63" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/task_completed_value"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView68"
                app:layout_constraintTop_toBottomOf="@+id/textView59" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/tot_hrs_value"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView60"
                app:layout_constraintTop_toBottomOf="@+id/textView62" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/pink"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/export_btn"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="@+id/imageView63"
                app:layout_constraintTop_toTopOf="@+id/imageView63" />

            <ImageView
                android:id="@+id/imageView69"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView63"
                app:srcCompat="@drawable/task_list_bg" />

            <ImageView
                android:id="@+id/imageView71"
                android:layout_width="319dp"
                android:layout_height="177dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="@+id/imageView69"
                app:layout_constraintTop_toBottomOf="@+id/imageView63"
                app:srcCompat="@drawable/subject_progress" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/weekly_study"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView71" />

            <ImageView
                android:id="@+id/imageView72"
                android:layout_width="346dp"
                android:layout_height="98dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView67"
                app:srcCompat="@drawable/task_list_bg" />

            <ImageView
                android:id="@+id/imageView73"
                android:layout_width="355dp"
                android:layout_height="117dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView67"
                app:srcCompat="@drawable/weekly_study_graph" />

            <Button
                android:id="@+id/button5"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/pink"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/export_report"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView72" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bottom_nv_bg"
        app:itemIconSize="40dp"
        app:itemIconTint="@color/nav_item_color"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>